stop reentrant window zooming and switch to user state after sizing. bug 125711 r=pinkerton,scc a=asa